--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "nfcApp",
-    "appid" : "__UNI__96FACD9",
+    "name" : "AndroidNFC",
+    "appid" : "__UNI__EE945A9",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -23,6 +23,7 @@
             /* android打包配置 */
             "android" : {
                 "permissions" : [
+                    "<uses-permission android:name=\"android.permission.NFC\" />",
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
